--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
                 <p><a href="life.html">Conway's Game of Life</a> (Functional but Unpolished)</p>
             </li>
             <li>
-                <p><a href="clicker.html">Semi-Mindless Clicker Game</a></p>
-            </li>
-            <li>
                 <p>Breakout</p>
             </li>
             <li>
@@ -43,6 +40,9 @@
             </li>
             <li>
                 <p>Quadratic Solver</p>
+            </li>
+            <li>
+                <p><a href="clicker.html">Semi-Mindless Clicker Game</a> (Unfinished, and left for dead)</p>
             </li>
         </ul>
         <br>
