add functional pong game

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <p><a href="life.html">Conway's Game of Life</a> (Functional but Unpolished)</p>
             </li>
             <li>
-                <p>Breakout</p>
+                <p><a href="pong.html">Pong</a> (Unfinished)</p>
             </li>
             <li>
-                <p>Pong</p>
+                <p>Breakout</p>
             </li>
             <li>
                 <p>Quadratic Solver</p>
