update status of Pong game on homepage

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p><a href="life.html">Conway's Game of Life</a> (Functional but Unpolished)</p>
             </li>
             <li>
-                <p><a href="pong.html">Pong</a> (Unfinished)</p>
+                <p><a href="pong.html">Pong</a> (Functional but Unpolished)</p>
             </li>
             <li>
                 <p>Breakout</p>
