--- a/snake.html
+++ b/snake.html
@@ -25,16 +25,15 @@
 
         <div id="scoreContainer" class="center">
             <h2>Score: <span id="snakeScore">0</span></h2>
-            <p>Press 'p' to play!</p>
         </div>
         <br>
         <div id="gameContainer" class="center">
-            <canvas width="400" height="400" id="Snake"></canvas>
+            <canvas width="400" height="400" style="border:5px solid gray" id="Snake"></canvas>
         </div>
         <br><br>
         <div class="center">
-            <button onclick="openHowToPlay()" style="width: 110px; height: 45px;">How to Play</button>
-            <button onclick="openSettings()" style="width: 110px; height: 45px;">Settings</button>
+            <button onclick="openHowToPlay()" style="width: 110px; height: 45px; background-color: black; color: white;">How to Play</button>
+            <button onclick="openSettings()" style="width: 110px; height: 45px; background-color: black; color: white;">Settings</button>
         </div>
         <br>
         <div id="howToPlayContainer" class="center">
@@ -45,20 +44,22 @@
                 You can use the four arrow keys to change the direction of the snake. 
                 The snake will move constantly without input.
             </div>
+            <p></p>
             <div id="howToPlayClose" class="center" style="display: none;">
-                <button id="howToPlayClose" onclick="closeHowToPlay()" style="width: 110px; height: 45px;">Close</button>
+                <button id="howToPlayClose" onclick="closeHowToPlay()" style="width: 110px; height: 45px; background-color: black; color: white;">Close</button>
             </div>
         </div>
 
         <div id="settingsContainer" class="center">
             <div id="settingsMessage" style="width: 400px; display: none;">
                 Difficulty select:
-                <button style="width: 65px; height: 30px;" onClick="environment.difficulty = 0;">Easy</button>
-                <button style="width: 65px; height: 30px;" onClick="environment.difficulty = 1;">Normal</button>
-                <button style="width: 65px; height: 30px;" onClick="environment.difficulty = 2;">Hard</button>
+                <button style="width: 65px; height: 30px; background-color: black; color: white;" onClick="environment.difficulty = 0;">Easy</button>
+                <button style="width: 65px; height: 30px; background-color: black; color: white;" onClick="environment.difficulty = 1;">Normal</button>
+                <button style="width: 65px; height: 30px; background-color: black; color: white;" onClick="environment.difficulty = 2;">Hard</button>
+                <p></p>
             </div>
             <div id="settingsClose" class="center" style="display: none;">
-                <button id="settingsClose" onclick="closeSettings()" style="width: 110px; height: 45px;">Close</button>
+                <button id="settingsClose" onclick="closeSettings()" style="width: 110px; height: 45px; background-color: black; color: white;">Close</button>
             </div>
         </div>
     </body>
