add pong to navbar

--- a/navbar.html
+++ b/navbar.html
@@ -21,6 +21,11 @@
                 <button class="navbutton">Conway's GoL</button>
             </a>
         </div>
+        <div class="navbutton-container">
+            <a href="pong.html" target="_parent">
+                <button class="navbutton">Pong</button>
+            </a>
+        </div>
     </div>
     <div id="menuIconContainer" onclick="toggleNavDropdown()">
         <div class="iconTopBar"></div>
