will now display difficulty

--- a/snake.html
+++ b/snake.html
@@ -25,6 +25,7 @@
 
         <div id="scoreContainer" class="center">
             <h2>Score: <span id="snakeScore">0</span></h2>
+            <h3>Difficulty: <span id="snakeDifficulty">Normal</span></h3>
         </div>
         <br>
         <div id="gameContainer" class="center">
