--- a/pong.html
+++ b/pong.html
@@ -40,7 +40,7 @@
     </div>
 
     <div id="settingsContainer" class="popup-container popup">
-        
+
     </div>
 </body>
 <script>
@@ -55,7 +55,7 @@
     window.onkeypress = handlePauseKey;
     document.getElementById("pongCanvas").onmousemove = movePaddleMouse;
 
-    window.onclick = handleClickAway;
+    window.onclick = closePopups;
 </script>
 
 </html>
