add link to breakout on homepage

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p><a href="pong.html">Pong</a> (Functional but Unpolished)</p>
             </li>
             <li>
-                <p>Breakout</p>
+                <p><a href="breakout.html">Breakout</a> (Unfinished)</p>
             </li>
             <li>
                 <p>Quadratic Solver</p>
