--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 <p><a href="breakout.html">Breakout</a> (Unfinished)</p>
             </li>
             <li>
+                <p><a href="hangman.html">Hangman</a> (Unfinished)</p>
+            </li>
+            <li>
                 <p>Quadratic Solver</p>
             </li>
             <li>
