added lives and score; added win and lose states

--- a/breakout.html
+++ b/breakout.html
@@ -20,6 +20,11 @@
         <div id="navbarContainer"></div>
         <h1 id="pageTitle">Breakout</h1>
 
+        <div id="scoreContainer" class="center">
+            <p style="font-size: 20px;">Score: <span id="breakoutScore"></span></p>
+            <p style="font-size: 20px;">Lives: <span id="breakoutLives"></span></p>
+        </div>
+
         <div id="gameContainer" class="center">
             <canvas width="480" height="320" style="border:5px solid gray" id="Breakout"></canvas>
         </div>
