add source for wordlist

--- a/hangman.html
+++ b/hangman.html
@@ -35,6 +35,11 @@
 
     </div>
     <br><br>
+    <div class="center">
+        The list of words that can be chosen for the game can be found <a href="hangmanWords.txt">here</a>.
+        <br>
+        The list is based on this <a href="https://www.ef.edu/english-resources/english-vocabulary/top-3000-words/">list</a> from <a href="https://www.ef.edu">www.ef.edu</a>.
+    </div>
 </body>
 <script>
     $("#navbarContainer").load("navbar.html");
