add Breakout and Hangman to navbar

--- a/navbar.html
+++ b/navbar.html
@@ -26,6 +26,16 @@
                 <button class="navbutton">Pong</button>
             </a>
         </div>
+        <div class="navbutton-container">
+            <a href="breakout.html" target="_parent">
+                <button class="navbutton">Breakout</button>
+            </a>
+        </div>
+        <div class="navbutton-container">
+            <a href="hangman.html" target="_parent">
+                <button class="navbutton">Hangman</button>
+            </a>
+        </div>
     </div>
     <div id="menuIconContainer" onclick="toggleNavDropdown()">
         <div class="iconTopBar"></div>
