update breakout status

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p><a href="minesweeper.html">Minesweeper</a> (Finished)</p>
             </li>
             <li>
-                <p><a href="snake.html">Snake</a> (Functional but still In Progress)</p>
+                <p><a href="snake.html">Snake</a> (Functional but Unpolished)</p>
             </li>
             <li>
                 <p><a href="life.html">Conway's Game of Life</a> (Functional but Unpolished)</p>
@@ -36,10 +36,10 @@
                 <p><a href="pong.html">Pong</a> (Functional but Unpolished)</p>
             </li>
             <li>
-                <p><a href="breakout.html">Breakout</a> (Unfinished)</p>
+                <p><a href="hangman.html">Hangman</a> (Functional but Unpolished)</p>
             </li>
             <li>
-                <p><a href="hangman.html">Hangman</a> (Unfinished)</p>
+                <p><a href="breakout.html">Breakout</a> (Mostly Functional)</p>
             </li>
             <li>
                 <p>Quadratic Solver</p>
