--- a/breakout.html
+++ b/breakout.html
@@ -54,7 +54,7 @@
                 <div class="slidecontainer">
                     <input type="range" min="1" max="10" value="4.5" class="slider" id="paddleXRange">
                 </div>
-                Ball Y Speed - The verticle speed of the ball:
+                Ball Y Speed - The vertical speed of the ball:
                 <div class="slidecontainer">
                     <input type="range" min="-7" max="-1" value="-3" class="slider" id="ballYRange">
                 </div>
@@ -62,7 +62,7 @@
                 <div class="slidecontainer">
                     <input type="range" min="1" max="7" value="3" class="slider" id="ballXRange">
                 </div>
-                Ball Deflection Speed - The ammount that the ball's speed chages when it hits the paddle:
+                Ball Deflection Speed - The amount that the ball's speed changes when it hits the paddle:
                 <div class="slidecontainer">
                     <input type="range" min="1" max="7" value="3" class="slider" id="ballRandomRange">
                 </div>
