minor visual tweaks

--- a/snake.html
+++ b/snake.html
@@ -24,8 +24,8 @@
 
 
         <div id="scoreContainer" class="center">
-            <h2>Score: <span id="snakeScore">0</span></h2>
-            <h3>Difficulty: <span id="snakeDifficulty">Normal</span></h3>
+            <p style="font-size: 20px;">Score: <span id="snakeScore">0</span></h2>
+            <p style="font-size: 20px;">Difficulty: <span id="snakeDifficulty">Normal</span></h3>
         </div>
         <br>
         <div id="gameContainer" class="center">
