add manual ball launch, how to play improvements

--- a/breakout.html
+++ b/breakout.html
@@ -37,10 +37,10 @@
         <br>
         <div id="howToPlayContainer" class="center">
             <div id="howToPlayMessage" style="width: 400px; display: none;">
-                The game begins on a black screen. 
-                Press 'p' when you are ready to start. During the game, 'p' can be used to freely pause and resume the game. 
-                Use the left and right arrow keys to move the white paddle at the bottom of the screen.
-                When the ball hits a brick, the brick will be destroyed. Your goal is to destroy all the bricks with 3 lives.
+                <p>Press 'p' to start the game. During the game, 'p' can be used to freely pause and resume the game.</p>
+                <p>Press the space bar to launch the ball</p>
+                <p>Use the left and right arrow keys to move the white paddle at the bottom of the screen.</p>
+                <p>When the ball hits a brick, the brick will be destroyed. Your goal is to destroy all the bricks with 3 lives.</p>
             </div>
             <p></p>
             <div id="howToPlayClose" class="center" style="display: none;">
