--- a/breakout.html
+++ b/breakout.html
@@ -70,6 +70,7 @@
             </div>
             <div id="settingsClose" class="center" style="display: none;">
                 <button id="settingsClose" onclick="closeSettings()" style="width: 110px; height: 45px; background-color: black; color: white;">Close</button>
+                <button id="settingsReset" onclick="resetSettings()" style="width: 110px; height: 45px; background-color: black; color: white;">Reset</button>
             </div>
         </div>
     </body>
