updated how to play

--- a/snake.html
+++ b/snake.html
@@ -38,12 +38,10 @@
         </div>
         <br>
         <div id="howToPlayContainer" class="center">
-            <div id="howToPlayMessage" style="width: 400px; display: none;">
-                The game begins on a black screen. 
-                Press 'p' when you are ready to start. During the game, 'p' can be used to freely pause and resume the game. 
-                Once started, the green snake will appear in the center of the black canvas. 
-                You can use the four arrow keys to change the direction of the snake. 
-                The snake will move constantly without input.
+            <div id="howToPlayMessage" style="width: 400px; display: none;"> 
+                <p>Press 'p' when you are ready to start. During the game, 'p' can be used to freely pause and resume the game.</p>
+                <p>You can use the four arrow keys to change the direction of the snake. The snake will move constantly without input.</p>
+                <p>Your goal is to eat as many of the apples as you can.</p>
             </div>
             <p></p>
             <div id="howToPlayClose" class="center" style="display: none;">
