clean up How To Play a bit

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -110,13 +110,9 @@
                     Of course, there are some ways to figure out safe squares that Auto Solve doesn't use (like # of mines left),
                     but these aren't always useful.
                     Once Auto Solve is done, spamming it will NOT help.
-                    If clicking Auto Solve a second time does anything, then the solver is broken.
-                    In that case, open an issue on <a href="https://github.com/qpwoeirut/GamesAndGadgets/issues">GitHub</a>
+                    If clicking Auto Solve for a second time does anything, then the solver is malfunctioning.
+                    In that case, open an issue on <a href="https://github.com/qpwoeirut/GamesAndGadgets/issues">GitHub</a>.
                 </p>
-            </div>
-            <br>
-            <button class="collapsible-control">How Auto-Solve Works</button>
-            <div class="container collapsible">
                 <p>
                     The solver's internal algorithm is pretty simple.
                     First it checks if any open cell already has all its mines flagged, and opens the remaining adjacent
@@ -129,20 +125,10 @@
                 </p>
             </div>
             <br>
-            <button class="collapsible-control">Contact</button>
+            <button class="collapsible-control">Credits and Licensing Information</button>
             <div class="container collapsible">
                 <p>
-                    This website has a GitHub repository <a
-                        href="https://github.com/qpwoeirut/GamesAndGadgets">here</a>.
-                    In the future, direct email contacts may also be added.
-                    For now, open an issue in the GitHub repository if you have any requests or complaints.
-                </p>
-            </div>
-            <br>
-            <button class="collapsible-control">Credits</button>
-            <div class="container collapsible">
-                <p>
-                    This was created by Stanley Zhong. The page is written in pure HTML, JavaScript, CSS, and XML.
+                    This page was created by Stanley Zhong. The page is written in pure HTML, JavaScript, CSS, and XML.
                     <br>
                     The custom fonts used are from FontStruct. Specifically, the font for the cells in the game grid is
                     <a href="https://fontstruct.com/fontstructions/show/1501665" target="_blank">here</a> and the font
@@ -170,10 +156,6 @@
                         target="_blank">here</a>. The preset difficulties came from <a
                         href="http://www.minesweeper.info/wiki/Minesweeper_Official_Rules" target="_blank">here</a>.
                 </p>
-            </div>
-            <br>
-            <button class="collapsible-control">Licenses</button>
-            <div class="container collapsible">
                 <p>
                     All FontStruct fonts are licensed under the Creative Commons <a
                         href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank">License 3.0</a>.
